<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="STR_KC_Titulo">Perímetro del círculo</string>
    <string name="STR_KC_CirculoDes">Imagen para describir circulo</string>
    <string name="STR_KC_Descripción">El perímetro de un círculo es el doble del producto de π por el radio (r). También se puede calcular a partir del diámetro (D), siendo el producto de π y el diámetro.</string>
    <string name="STR_KC_RadioDiametro">¿Desea hallar el perímetro del círculo mediante su radio o su díametro?</string>
    <string name="STR_KC_Radio">Calcular el perímetro del circulo a través de su radio.</string>
    <string name="STR_KC_Diametro">Calcular el perímetro del círculo a través de su díametro.</string>
    <string name="STR_KC_Valor">Por favor, ingrese el valor :</string>
    <string name="STR_KC_Calcular">¡Calcular perímetro!</string>
    <string name="app_name">Practica4Equipo1</string>
    <string name="nav_header_title">Equipo 1</string>
    <string name="btn_calcular">CALCULAR</string>
    <string name="lado_cuadrado">Ingrese el lado del cuadrado</string>
    <string name="menu_triangle">Área Triángulo</string>
    <string name="base">Introduzca la base</string>
    <string name="altura">Introduzca la altura</string>
    <string name="menu_perimetro_cuadrado">Perímetro Cuadrado</string>
    <string name="menu_area_cuadrado">Área Cuadrado</string>
    <string name="menu_perimetro_hexagono">Perímetro Hexágono Regular</string>
    <string name="lado_hexagono">Ingrese el lado del Hexágono</string>
    <string name="menu_area_hexagono">Área Hexágono Regular</string>
    <string name="radio">Radio</string>
    <string name="diametro">Diámetro</string>
    <string name="perimetro">Perímetro</string>
    <string name="seleccione_parametro">Seleccione parámetro</string>
    <string name="resultado">Resultado</string>
    <string name="valor">Ingrese valor</string>
    <string name="descripcion">El círculo es una región del plano delimitada por una circunferencia
        y, por tanto, tiene asociada un área.​​ A veces se utiliza indistintamente círculo por
        circunferencia siendo esta última su borde, es decir, la curva perimetral que lo determina
        y que solo posee longitud.​</string>
    <string name="menu_area_circulo">Área Círculo</string>
    <string name="menu_perimetro_circulo">Perímetro Círculo</string>

</resources>