<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_circle"
    android:orientation="vertical"
    tools:context=".fragments.AreaCirculoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:text="@string/descripcion"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:text="@string/seleccione_parametro"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radio"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb_diametro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diametro"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RadioGroup>

        <EditText
            android:id="@+id/et_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:hint="@string/valor"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"


            tools:ignore="Autofill" />

        <Button
            android:id="@+id/bt_calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginBottom="30dp"
            android:background="@drawable/redondo2"
            android:padding="9dp"
            android:text="@string/btn_calcular"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/redondo"
            android:gravity="center"
            android:hint="@string/resultado"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>
</ScrollView>